Fix incorrect spacing on products

--- a/src/components/product/productCards.scss
+++ b/src/components/product/productCards.scss
@@ -17,7 +17,7 @@
     display: flex;
     flex-flow: row nowrap;
     align-items: flex-start;
-    padding-left: 20px;
+    padding-inline: 20px;
     //gap: 10px;
 
     &-container {
